--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,8 +17,8 @@ jobs:
       - run:
           name: Save test results
           command: |
-            mkdir -p ~/test-results/junit/
-            find . -type f -regex ".*target/cucumber-reports/advanced-reports/extentreports/extent.html" -exec cp {} ~/test-results/junit/ \;
+            mkdir -p ~/test-results/
+            find . -type f -regex ".*target/cucumber-reports/advanced-reports/*/*.html" -exec cp {} ~/test-results/ \;
           when: always
       - store_test_results:
           path: ~/test-results
