--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,6 @@ jobs:
       - checkout
       - run: mkdir test-reports
       - run:
-          name: install dependencies
-          command: |
-            gem install bundler
-      - run:
           name: Download Selenium
           command: curl -O http://selenium-release.storage.googleapis.com/3.141/selenium-server-standalone-3.141.59.jar
       - run:
@@ -21,11 +17,10 @@ jobs:
       - run:
           name: Save test results
           command: |
-            mkdir -p ~/cucumber
-            bundle exec cucumber --format pretty --format json --out ~/cucumber/tests.cucumber
+            mkdir -p ~/test-results/junit/
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
           when: always
       - store_test_results:
-          path: ~/cucumber
+          path: ~/test-results
       - store_artifacts:
-          path: ~/cucumber
-          
+          path: ~/test-results/junit
