--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,7 @@
 
 			<plugin>
 				<groupId>net.masterthought</groupId>
-				<artifactId>cucumber-reporting</artifactId>
+				<artifactId>maven-cucumber-reporting</artifactId>
 				<version>5.3.0</version>
 
 				<executions>
