--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,15 @@
-version: 2
+version: 2.1
+orbs:
+  browser-tools: circleci/browser-tools@1.1
 jobs:
   build:
     docker:
-      - image: circleci/openjdk:9.0.4-jdk-browsers
+      - image: cimg/openjdk:16.0.1-browsers
     steps:
+      - browser-tools/install-browser-tools
       - checkout
-      - run: mkdir test-reports
-      - run:
-          name: Download Selenium
-          command: curl -O http://selenium-release.storage.googleapis.com/3.141/selenium-server-standalone-3.141.59.jar
-      - run:
-          name: Start Selenium
-          command: java -jar selenium-server-standalone-3.141.59.jar -log test-reports/selenium.log
-          background: true
-      - run: mvn test
-      - run:
-          name: Save test results
-          command: |
-            mkdir -p ~/test-results/junit/
-            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
-          when: always
-      - store_test_results:
-          path: ~/test-results
-      - store_artifacts:
-          path: ~/test-results/junit
+      - run: |
+          node --version
+          java --version
+          google-chrome --version
+          mvn clean test
