--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,9 +18,9 @@ jobs:
       - run:
           name: Build
           command: |
-            apt update
-            apt install libnss
-            apt install libnss3-dev libgdk-pixbuf2.0-dev libgtk-3-dev libxss-dev
+            sudo apt update
+            sudo apt install libnss
+            sudo apt install libnss3-dev libgdk-pixbuf2.0-dev libgtk-3-dev libxss-dev
 
       # Then run your tests!
       - run:
