--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,13 @@ jobs:
     steps:
       # Checkout the code as the first step.
       - checkout
+      - run:
+          name: Download Selenium
+          command: curl -O http://selenium-release.storage.googleapis.com/3.141/selenium-server-standalone-3.141.59.jar
+      - run:
+          name: Start Selenium
+          command: java -jar selenium-server-standalone-3.141.59.jar -log test-reports/selenium.log
+          background: true
       # Use mvn clean and package as the standard maven build phase
       - run:
           name: Build
@@ -36,6 +43,7 @@ jobs:
             wget -O /tmp/chromedriver/chromedriver.zip 'http://chromedriver.storage.googleapis.com/'$latest'/chromedriver_linux'$b'.zip' &&
             sudo unzip /tmp/chromedriver/chromedriver.zip chromedriver -d /usr/local/bin/ &&
             echo 'success?'
+
       # Then run your tests!
       - run:
           name: Test
