--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,9 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. 
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
 jobs:
-  # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
-  build-and-test:  
-    # These next lines define a Docker executor: https://circleci.com/docs/2.0/executor-types/
-    # You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # Be sure to update the Docker image tag below to openjdk version of your application.
-    # A list of available CircleCI Docker Convenience Images are available here: https://circleci.com/developer/images/image/cimg/openjdk
+  build:
     docker:
-      - image: cimg/openjdk:8.0.292-browsers
+      - image: circleci/openjdk:9.0.4-jdk-browsers
     steps:
-      # Checkout the code as the first step.
       - checkout
       - run: mkdir test-reports
       - run:
@@ -22,39 +13,14 @@ jobs:
           name: Start Selenium
           command: java -jar selenium-server-standalone-3.141.59.jar -log test-reports/selenium.log
           background: true
-      # Use mvn clean and package as the standard maven build phase
+      - run: mvn test
       - run:
-          name: Build
+          name: Save test results
           command: |
-            sudo apt update
-            sudo apt install libgconf-2-4 libatk1.0-0 libatk-bridge2.0-0 libgdk-pixbuf2.0-0 libgtk-3-0 libgbm-dev libnss3-dev libxss-dev
-            sudo curl -s https://dl.google.com/linux/linux_signing_key.pub | apt-key add - \
-            && echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list && \
-            sudo apt-get update && \
-            sudo apt-get install -y \
-            xvfb \
-            google-chrome-stable=92.\* \
-            unzip
-            sudo apt-get install unzip &&
-            a=$(uname -m) &&
-            mkdir /tmp/chromedriver/ &&
-            wget -O /tmp/chromedriver/LATEST_RELEASE http://chromedriver.storage.googleapis.com/LATEST_RELEASE &&
-            if [ $a == i686 ]; then b=32; elif [ $a == x86_64 ]; then b=64; fi &&
-            latest=$(cat /tmp/chromedriver/LATEST_RELEASE) &&
-            wget -O /tmp/chromedriver/chromedriver.zip 'http://chromedriver.storage.googleapis.com/'$latest'/chromedriver_linux'$b'.zip' &&
-            sudo unzip /tmp/chromedriver/chromedriver.zip chromedriver -d /usr/local/bin/ &&
-            echo 'success?'
-
-      # Then run your tests!
-      - run:
-          name: Test
-          command: mvn clean test
-
-workflows:
-  # Below is the definition of your workflow.
-  # Inside the workflow, you provide the jobs you want to run, e.g this workflow runs the build-and-test job above.
-  # CircleCI will run this workflow on every commit.
-  # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows
-  sample: 
-    jobs:
-      - build-and-test
+            mkdir -p ~/test-results/junit/
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
+          when: always
+      - store_test_results:
+          path: ~/test-results
+      - store_artifacts:
+          path: ~/test-results/junit
