--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,9 @@ jobs:
       - image: circleci/openjdk:9.0.4-jdk-browsers
     steps:
       - checkout
-      - run: mkdir test-reports
+      - run: mkdir test-reports/
+      - run: mkdir test-reports/results
+      - run: mkdir test-reports/reports  
       - run:
           name: Download Selenium
           command: curl -O http://selenium-release.storage.googleapis.com/3.141/selenium-server-standalone-3.141.59.jar
@@ -18,9 +20,8 @@ jobs:
       - run:
           name: Save test results
           command: |
-            mkdir test-reports/reports
             cp -avr target/cucumber-reports/ ~/test-reports/reports
-            mkdir test-reports/results
+           
             cp target/surefire-reports/TEST-runner.RunCucumberTest.xml ~/test-reports/results
           when: always
       - store_test_results:
