--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,7 @@ jobs:
       - image: circleci/openjdk:9.0.4-jdk-browsers
     steps:
       - checkout
-      - run: mkdir test-reports/
-      - run: mkdir test-reports/results
-      - run: mkdir test-reports/reports  
+      - run: mkdir test-reports
       - run:
           name: Download Selenium
           command: curl -O http://selenium-release.storage.googleapis.com/3.141/selenium-server-standalone-3.141.59.jar
@@ -20,10 +18,14 @@ jobs:
       - run:
           name: Save test results
           command: |
-            cp target/surefire-reports/TEST-runner.RunCucumberTest.xml test-reports/results/
-            cp -avr target/cucumber-reports/advanced-reports/extentreports/ test-reports/reports/
+            mkdir -p ~/test-results/junit/
+            mkdir -p ~/test-results/html/
+            cd target/cucumber-reports/advanced-reports/extentreports
+            cp extent.html ~/test-results/html
+            cd target/surefire-reports
+            cp TEST-runner.RunCucumberTest.xml ~/test-results/junit
           when: always
       - store_test_results:
-          path: ~/test-reports/results/TEST-runner.RunCucumberTest.xml
+          path: ~/test-results/junit
       - store_artifacts:
-          path: ~/test-reports/reports/extentreports
+          path: ~/test-results/html
