--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,8 @@ jobs:
     docker:
       - image: circleci/openjdk:9.0.4-jdk-browsers
     steps:
+      - run: sudo apt-get install ruby-full
+      - run: sudo gem install bundler
       - checkout
       - run: mkdir test-reports
       - run:
