--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
     steps:
       - run: sudo apt update
       - run: sudo apt install rubygems-integration
+      - run: sudo apt install gems
       - run: sudo gem install bundler
       - checkout
       - run: mkdir test-reports
