--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,11 +5,6 @@ jobs:
     docker:
       - image: circleci/openjdk:9.0.4-jdk-browsers
     steps:
-      - run: sudo apt update
-      - run: sudo apt install rubygems-integration
-      - run: sudo apt install gems
-      - run: sudo apt-get install rubygems
-      - run: sudo gem install bundler
       - checkout
       - run: mkdir test-reports
       - run:
@@ -23,10 +18,13 @@ jobs:
       - run:
           name: Save test results
           command: |
-            mkdir -p ~/cucumber
-            bundle exec cucumber --format junit --out ~/cucumber/junit.xml
+            mkdir -p ~/test-results/junit/
+            mkdir -p ~/test-results/html/
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
+            cd target/cucumber-reports/advanced-reports/extentreports
+            cp extent.html ~/test-results/html
           when: always
       - store_test_results:
-          path: ~/cucumber
+          path: ~/test-results/junit
       - store_artifacts:
-          path: ~/cucumber
+          path: ~/test-results/html
