--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,9 +18,12 @@ jobs:
           name: Save test results
           command: |
             mkdir -p ~/test-results/junit/
+            mkdir -p ~/test-results/html/
             find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
+            cd target/cucumber-reports/advanced-reports/extentreports
+            cp extent.html ~/test-results/html
           when: always
       - store_test_results:
-          path: ~/test-results
-      - store_artifacts:
           path: ~/test-results/junit
+      - store_artifacts:
+          path: ~/test-results/html
